# decision-tree-based-hand-gesture-recognition

./: .gitignore  Cargo.toml  Makefile  README.md  gather_programm_size_data.sh  gather_size_and_accuracy.sh  gather_total_accuracy_data.sh
abschlussvortrag/: .~lock.schwerpunktverteilung.odg#  schwerpunktverteilung.odg
antrittsvortrag/: process.odg  process.xcf  sample_geste  schwerpunkt_ansatz.odg
data/: .gitignore
evaluation/: find_best_feasible_configuration.py  sort_by_comb_accuracy.py
feature_extractor/: Cargo.toml
feature_extractor/src/: main.rs
gesture_recorder/: Cargo.toml
ino_bench/: ino_bench.ino
ino_tree/: .gitignore  decision_forest.h  feature.ino  gesture.ino  ino_tree.ino  serial.ino
ino_tree2/: .gitignore  CompoundEyeCamera.cpp  decision_forest.h  decision_tree.h  features.cpp  features.h  ino_tree2.ino
ino_tree3/: CompoundEyeCamera.cpp  CompoundEyeCamera.h  decision_forest.h  decision_tree.h  features.cpp  features.h  ino_tree3.ino
ino_tree4/: .gitignore  CompoundEyeCamera.cpp  CompoundEyeCamera.h  decision_forest.h  features.cpp  features.h  ino_tree4.ino
lib_data_set/: Cargo.toml
lib_evaluation/: Cargo.toml
lib_feature/: Cargo.toml
model/: .gitignore  create_forest.py  create_tree.py  decision_tree.py  tree_to_code.py
model_data/: .gitignore
plotting/: plot_brightness_testset.py  program_size.py  size_accuracy_plots.py  size_plots.py
prepare_data/: .gitignore
proof_of_concept/: decision_tree.py  tree_to_code.py
serial_reader/: Cargo.toml
simulation/: Cargo.toml
simulation/src/: main.rs
test_env/: .gitignore  (+3 more)
(+307 files in other folders)
