[package]
name = "simulation"
version = "0.1.0"
authors = ["Tom Dymel <tom.dymel@tuhh.de>"]
edition = "2018"

[dependencies]
lib_evaluation = { path = "../lib_evaluation", version = "*" }
lib_data_set = { path = "../lib_data_set", version = "*" }
lib_gesture = { path = "../lib_gesture", version = "*" }
lib_feature = { path = "../lib_feature", version = "*" }
strum = "0.19"
serialport = "3.3.0"
num-traits = "0.2"
rayon = "*"

[features]
default = []
feature_set1 = []
feature_set2 = []
feature_set3 = []
feature_set4 = []
feature_set5 = []
feature_set6 = []
feature_set7 = []
feature_set8 = []
feature_set9 = []